...
            android:onClick="onCheckboxClicked"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Schools"
            android:id="@+id/schools_checkBox"
            android:checked="false"
            android:onClick="onCheckboxClicked"
            />

        <CheckBox
            android:layout_width="wrap_content"
...
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:id="@+id/zipLayout">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="Zipcode: "/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtZip"
            android:layout_weight="1"
            android:numeric="integer"
            android:inputType="number"
            android:imeOptions="actionDone"/>

        <CheckBox
...
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:id="@+id/radiusLayout">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="Radius: "/>



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtRadius"
            android:layout_weight="1"
            android:numeric="integer"
            android:inputType="number"
            android:imeOptions="actionDone"/>

    </LinearLayout>
...
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top">
        <Button
            android:layout_gravity="center_horizontal|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            android:id="@+id/button"
            android:onClick="onSearchClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
...
