<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.school_business.android.school_business.EventFragActivity">
    <item android:id="@+id/event_search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_search_black_48dp"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView"
          />
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/profile"
          android:title="@string/menu_profile"
          android:orderInCategory="100"
          app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/logout"
          android:title="@string/menu_logout"
          android:orderInCategory="100"
          app:showAsAction="ifRoom|withText" />
</menu>
